src/App.css
@import url(https://fonts.googleapis.com/css?family=Roboto:500);
.App {
  text-align: center;
  padding: 2% 5%;
  background-color: #f7f7ed;
}

.App * {
  box-sizing: border-box;
}

ul {
  padding: 0;
  list-style: none;
}

p {
  margin: 5px 0;
}

input[type="text"],
input[type="number"] {
  padding: 8px 6px 8px 10px;
  border-radius: 4px;
  outline: none;
  border: 1px solid #ccc;
  font-size: 14px;
  line-height: 20px;
  align-self: center;
  height: 38px;
  margin-bottom: 20px;
}

.city {
  width: 250px;
}

#city-search {
  display: flex;
  flex-direction: column;
  margin: auto;
  position: relative;
}

.suggestions {
  width: 250px;
  position: absolute;
  top: 45px;
  z-index: 2;
  align-self: center;
  margin: 0;
  font-size: 14px;
  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
}

.suggestions > li {
  text-align: left;
  padding: 8px 6px 8px 10px;
  background-color: #eee;
  cursor: default;
}

.suggestions > li:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.suggestions > li:hover {
  background-color: #bcdcdb;
}

.event {
  padding: 10px 10px 35px;
  margin-bottom: 10px;
  text-align: left;
  border: 1px solid #ccc;
  border-radius: 4px;
  position: relative;
  background-color: #DEDED4;
}

#event-list :hover {
  background-color: #EAEAE0;
}


.details-btn {
  position: absolute;
  right: 5px;
  bottom: 5px;
  padding: 5px 8px;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}
.alerts-container {
  position: fixed;
  top: 0px;
  left: 20px;
  width: 250px;
  z-index: 1000;
}
/* .charts-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.responsive-container {
  margin: 0 auto; 
  padding: 0 10px; 
  height: 400px;
  width: 99%;
}

.pie-label {
  font-size: 12px;
}

@media (max-width: 810px){
  .responsive-container {
    padding: 0 5%; 
    height: 300px;
    width: 99%;
  }
  .pie-label {
    font-size: 10px;
  }
  .charts-container {
    grid-template-columns: 1fr;
  }
} */

